--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,10 @@
-<h2>Products</h2>
+<h2>Produtos</h2>
 
+<div *ngFor="let product of products">
+  <h3>
+    {{product.name}}
+  </h3>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
